@startuml
skinparam classAttributeIconSize 0

left to right direction

class Platform {
}

class CreateDeliveryRunUI {
}

class CreateDeliveryRunController {
  +DeliveryRunRegistry()
  +addOrderToDeliveryRun(Order)
  +confirmedDeliveryRun(DeliveryRun)
}


class DeliveryRunRegistry {
  +DeliveryRunRegistry()
  +addOrderToDeliveryRun(Order)
  +confirmedDeliveryRun(DeliveryRun)
}

class Pharmacy {
  -String pharmacyName
  -String companyName
  -int NIF
}

class DeliveryRun {
    -int id
    -list of
    -String courierID
    +addDeliveryRun(DeliveryRun)
    +new DeliveryRun()
    +addOrderToDeliveryRun(Order)
}

class Order {
    -int orderID
    -int clientID
    -int state
    -ArrayList<OrderLine> cart
}

class Courier{
        -String name;
        -double niss;
        -int nif;
        -double weight;
        -String email;
        -int pharmacyId;
        -int scooterId;
    }

CreateDeliveryRunUI   ..> CreateDeliveryRunController
CreateDeliveryRunController ..> Platform
CreateDeliveryRunController ..> DeliveryRunRegistry
DeliveryRunRegistry ..> DeliveryRun
DeliveryRun "1" -- "1..*" Order : Of   >
DeliveryRun "1" -- "1" Courier : Made by >
Courier "1" -- "1" Pharmacy : Of a >



@enduml


